# IMACNIGHTMARE

./: CMakeLists.txt  README.md
assets/models/: cube.fbx  maze1.mtl  maze2.mtl  maze3.mtl  tipi.fbx
assets/models/cubeSponge/: cubeSponge.mtl
assets/models/labyrinthe/: labyrintheTex.mtl
assets/musique/: FLETCHER.m4a
glimac/include/glimac/: FreeflyCamera.hpp  SDLWindowManager.hpp  TrackballCamera.hpp
glimac/src/: SDLWindowManager.cpp
src/: CMakeLists.txt  interface.cpp  interface.hpp  light.cpp  light.hpp  main.cpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  objLight.hpp  structures.hpp
src/shaders/: 3D.vs.glsl  MultiTex3D.fs.glsl  directionalLight.fs.glsl  lightObjShader.fs.glsl  lightObjShader.vs.glsl  lightShader.fs.glsl  lightShader.vs.glsl  lightShaderDir.fs.glsl  normal.fs.glsl  ponctuelleLight.fs.glsl  tex3D.fs.glsl
